Revise README for CSV file handling and warnings
Updated README with usage instructions for CSV files and JavaFX warnings.